--- a/index-lucuma.html
+++ b/index-lucuma.html
@@ -17,7 +17,7 @@
     <!-- fin de codigo para recaptcha -->
 </head>
 
-<body>
+<body class="lucuma">
     <header>
         <!-- <div class="botonMenu">
             <i class="fas fa-bars"></i>
@@ -49,7 +49,7 @@
 
     </header>
     <div class="contenedorMaster">
-
+        
         <div class="cuerpoTexto">
             <div class="logoCopasu">
                 <img src="img/logoCopasu.png" alt="">
