--- a/gracias.html
+++ b/gracias.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>COPASU HOTEL | Puerto Maldonado</title>
     <meta http-equiv="Refresh" content="5;url=http://www.copasuhotel.com.pe">
+
+        <!-- codigo para animate css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body>
     <h1>GRACIAS POR ESTAR CON NOSOTROS!!</h1>
